--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.12.3",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "multer": "^1.4.2",
+    "shortid": "^2.2.16"
   },
   "devDependencies": {
     "eslint": "^7.24.0",
